// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"TextLink" renders (dark theme) 1`] = `
.emotion-0 {
  color: #0c78ba;
  display: inline;
  font-size: 16px;
  font-weight: 300;
  opacity: 1;
  text-align: left;
  text-transform: none;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

.emotion-0:hover {
  color: rgb(10,101,156);
}

.emotion-0:visited,
.emotion-0:link,
.emotion-0:active {
  color: #0c78ba;
}

.emotion-1 {
  background: #000;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

<div
  className="emotion-1"
>
  <a
    className="emotion-0"
  >
    TextLink
  </a>
</div>
`;

exports[`"TextLink" renders 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: #0c78ba;
  display: inline;
  font-size: 16px;
  font-weight: 300;
  opacity: 1;
  text-align: left;
  text-transform: none;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

.emotion-0:hover {
  color: rgb(10,101,156);
}

.emotion-0:visited,
.emotion-0:link,
.emotion-0:active {
  color: #0c78ba;
}

<div
  className="emotion-1"
>
  <a
    className="emotion-0"
  >
    TextLink
  </a>
</div>
`;
